--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="row justify-content-center">
             <div class="col pt-3 fs-1 fw-bolder logo-text">
-        <div>Think.</div>
+        <div>Think!</div>
             <div>Plan.</div>
             <div>Do.</div>
         </div>
